--- a/README.org
+++ b/README.org
@@ -27,8 +27,8 @@
 *** Calendar
     - Main work  [2015-12-01 Tue]-[2016-03-01 Tue]
     - [[https://faculty.biu.ac.il/~cpm2016/][CPM 2016]]
-      - Abstract Submission <2016-01-21 Thu>
-      - Full paper submission <2016-01-28 Thu>
+      - Abstract Submission [2016-01-21 Thu]
+      - Full paper submission [2016-01-28 Thu]
       - Acceptation [2016-03-14 Mon]
       - Final Submission [2016-04-03 Sun]
       - Presentation [2016-06-27 Mon]-[2016-06-29 Wed]
@@ -42,6 +42,12 @@
     3. Generalization to larger output alphabets $B>2$
 ** Trabajo Dirigido Esteban Cifuentes [2017-04-03 Mon]-[2017-06-30 Fri]
 *** Objectives
+    1. [ ] GENERALIZE [CPM2016]'s results to larger output alphabets $B>2$
+    2. [ ] IMPLEMENT in python the generalisation to larger output alphabet
+    3. [ ] STUDY the feasability of generalizing the approach to Alphabetical Search Trees
+    4. [ ] STUDY the feasability of generalizing the approach to Minmax trees
 *** Calendar
+    - [2017-03-31 Fri] School accepts intersnhip proposal
+    - [2017-06-30 Fri] End of Internship Proposal
 *** Results
 *** Conclusions
